--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
     <iframe id="frame" style="height: 100vh; width: 100vw;"></iframe>
 
     <script type="module">
-        import { setTransport, setWisp, makeURL, getProxied } from 'https://cdn.jsdelivr.net/gh/mehhhofficial/supreme-dollop@latest/lethal.js';
+        import { setTransport, setWisp, makeURL, getProxied } from 'https://cdn.jsdelivr.net/gh/mehhhofficial/supreme-dollop@v2/lethal.js';
         const frame = document.getElementById('frame');
         
         setTransport('epoxy');
@@ -21,4 +21,5 @@
     </script>
 </body>
 </html>
+
 
